--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,12 @@
+/**
+ * @Author: adriamoya
+ * @Date:   2018-12-02T22:56:46+00:00
+ * @Last modified by:   adriamoya
+ * @Last modified time: 2019-01-20T22:48:58+00:00
+ */
+
+
+
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
